--- a/templates/tearsheets/index.html
+++ b/templates/tearsheets/index.html
@@ -28,11 +28,11 @@
 
 
     </div>
-    <div class="text-center">
+    <!-- <div class="text-center">
       <button class="bg-yellow" id="later">
         <</button> <button class="bg-yellow" id="vroeger">>
       </button>
-    </div>
+    </div> -->
     {% else %}
     <div class="row text-center">
       <div class="col-md-12">
