--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1960,10 +1960,10 @@ a:hover {
   font-weight: bold;
 }
 
-.work-img {
+/* .work-img {
   width: 30rem;
   height: 20rem;
-}
+} */
 
 .work-img-exh {
   width: 14rem;
@@ -2221,7 +2221,7 @@ a:hover {
 /*Tearsheets and Exhibitions*/
 
 #container {
-  width: 750px;
+  width: 1100px;
   white-space: nowrap;
   overflow-x: auto;
   margin: 40px auto;
@@ -2238,6 +2238,8 @@ a:hover {
 .element {
   display: inline-block;
   padding: 40px;
+  padding-top: 80px;
+  padding-bottom: 80px;
   background-color: #fff;
   margin: 0px 5px 20px 5px;
   float: left;
