--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% block content %}
 <!-- Photos -->
-<section id="posts" class="py-5">
+<section id="posts" class="pb-5">
   <div class="container">
     <!-- <div class="row text-center">
             <div class="col-md-12">
