--- a/templates/tearsheets/index.html
+++ b/templates/tearsheets/index.html
@@ -19,7 +19,7 @@
           horizontal-h
         {% endif %}">
           <ul>
-            <img class="work-img img-fluid" src="{{ tearsheet.photo_main.url }}" />
+            <img class="img-fluid" src="{{ tearsheet.photo_main.url }}" />
             <li class="jaartal j-yellow"></li>
           </ul>
         </li>
