--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -19,7 +19,7 @@
           horizontal
         {% endif %}">
           <ul>
-            <img class="work-img img-fluid" src="{{ exhibition.photo_main.url }}" />
+            <img class="img-fluid" src="{{ exhibition.photo_main.url }}" />
             <li class="jaartal">{{exhibition.date | date:"Y"}}</li>
             <li class="ondertitel">{{exhibition.title}}</li>
           </ul>
