--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -27,7 +27,9 @@
         {% endfor %}
       </ul>
 
-
+    </div>
+    <div class="scrollbar" id="style-3">
+      <div class="force-overflow"></div>
     </div>
     <!-- <div class="text-center">
       <button class="bg-pink" id="later">
