--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -28,14 +28,11 @@
       </ul>
 
     </div>
-    <div class="scrollbar" id="style-3">
-      <div class="force-overflow"></div>
-    </div>
-    <!-- <div class="text-center">
+    <div class="text-center">
       <button class="bg-pink" id="later">
         <</button> <button class="bg-pink" id="vroeger">>
       </button>
-    </div> -->
+    </div>
     {% else %}
     <div class="row text-center">
       <div class="col-md-12">
