--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1717,9 +1717,17 @@ a:hover {
   color: #f3a9bb;
 }
 
+.pink-line {
+  border-bottom: 1px solid #f3a9bb;
+}
+
 .bg-yellow {
   background: transparent;
   color: #ffd300;
+}
+
+.yellow-line {
+  border-bottom: 1px solid  #ffd300;
 }
 
 @keyframes fadein {
@@ -2226,7 +2234,7 @@ a:hover {
   width: 1100px;
   white-space: nowrap;
   overflow-x: auto;
-  margin: 40px auto;
+  margin: 0 auto;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
