--- a/templates/tearsheets/index.html
+++ b/templates/tearsheets/index.html
@@ -9,7 +9,7 @@
             </div>
         </div> -->
 
-    <div id="container">
+    <div id="container" class="yellow-line">
       <ul id="lijst">
         {% if tearsheets %} {% for tearsheet in tearsheets %}
         <li class="element 
