--- a/templates/elements/posts.html
+++ b/templates/elements/posts.html
@@ -9,7 +9,7 @@
             </div>
         </div> -->
     {% if posts %} {% for post in posts %} {% if post.is_published %}
-    <div class="row text-center post-container">
+    <div class="row py-3 text-center post-container">
       <div class="col-md-5 mb-3">
         <img src="{{ post.photo_main.url }}" alt="" class="mb-3 img-fluid" />
       </div>
