--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -9,7 +9,7 @@
             </div>
         </div> -->
 
-    <div id="container">
+    <div id="container" class="pink-line">
       <ul id="lijst">
         {% if exhibitions %} {% for exhibition in exhibitions %}
         <li class="element 
