--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %} {% block content %}
-<div class="row  p-5">
-  <div class="col-md-5">
-    <div class="container text-center">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature" />
+<div class="container">
+  <div class="row  p-5">
+    <div class="col-md-6 p-3">
+      <div class="text-center">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature" />
+      </div>
     </div>
-  </div>
-  <div class="col-md-7">
-    <div class="mb-4">
-      <script src="https://cdn.htmlgames.com/embed.js?game=Go&amp;&amp;bgcolor=white"></script>
+    <div class="col-md-6 p-3">
+      <div class="mb-4">
+        <script src="https://cdn.htmlgames.com/embed.js?game=Go&amp;&amp;bgcolor=white"></script>
+      </div>
     </div>
   </div>
 </div>
