--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %} {% block content %}
 <!-- Photos -->
 <section id="posts" class="pb-5">
-  <div class="container">
+  <div class="container container-work">
     <!-- <div class="row text-center">
             <div class="col-md-12">
                 <h2 class="py-5 blog-title post-title title"></h2>
@@ -10,7 +10,7 @@
         </div> -->
     {% if works %} {% for work in works %} {% if work.is_published %}
     <div class="row work-row text-center post-container">
-      <div class="col-md-6 mb-3">
+      <div class="col-md-6 mb-3 col-work ">
         <img src="{{ work.photo_main.url }}" alt="" class="mb-3 img-fluid" />
       </div>
       <div class="col-md-6 mb-3">
