--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2282,7 +2282,7 @@ a:hover {
   .jaartal { padding: 5px;
              font-size: 14pt;
              font-weight: bold; 
-             border-bottom: 1px solid #000}
+             border-bottom: 1px solid #f3a9bb;}
 
   .ondertitel { font-size: 12pt; }
 
