--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2339,7 +2339,7 @@ button:focus {
   width: 350px;
 }
 
-.horizontal-h {
+.horizontal-h:hover {
   transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
