--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1961,6 +1961,10 @@ a:hover {
   padding: 0 !important;
 }
 
+.col-work-img {
+  padding: 0 !important;
+}
+
 .col-work {
   padding: 0 !important;
   padding-right: 20px;
