--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -8,7 +8,7 @@
             </div>
         </div> -->
     <div class="row">
-      {% if testimonials %} {% for testimonial in testimonials %}
+      {% if testimonials %} {% for testimonial in testimonials %} {% if testimonial.is_published %}
       <div class="col-lg-6 mb-5">
         <div class="square-container">
           <div class="square">
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-      {% endfor %} {% else %}
+      {% endif %} {% endfor %} {% else %}
     </div>
     <div class="row text-center">
       <div class="col-md-12">
