--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -3,19 +3,24 @@
 <div class="container">
   <div class="row  p-5">
     <div class="col-md-6 p-3">
-      <div class="text-center">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature" />
+      <div class="mb-4 purple-border p-3">
+        <script src="https://cdn.htmlgames.com/embed.js?game=Go&amp;&amp;bgcolor=white"></script>
       </div>
     </div>
     <div class="col-md-6 p-3">
-      <div class="mb-4">
-        <script src="https://cdn.htmlgames.com/embed.js?game=Go&amp;&amp;bgcolor=white"></script>
+      <div class="justify px-3">
+        <p>Go is believed to have been continuously played for the last 2500 years. Players take turns to place stones
+          on the board, the aim being to capture the opponent’s stones by surrounding then removing them. The winner is
+          the one with the greatest combined score of surrounded territory & captured stones.<br />
+          Compared to chess, the simple rules & larger board lead to a game of great complexity; there are at least
+          10170 legal board positions, which is at least a million trillion trillion trillion trillion trillion trillion
+          trillion times greater than the number of electrons in the universe, itself a pretty large number; because of
+          this, Go rather than chess is now used to challenge AI programs.<br />
+          So, if you have a few spare minutes, give it your best shot – how hard can it be, right?<br />
+          Good luck & thanks for visiting.<br />
+          vita lux et amor
+        </p>
+        <img src="{% static '/images/signature.jpg' %}" alt="" class="img-fluid signature" />
       </div>
     </div>
   </div>
