Update number in text Game page

--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -13,7 +13,7 @@
           on the board, the aim being to capture the opponent’s stones by surrounding then removing them. The winner is
           the one with the greatest combined score of surrounded territory & captured stones.<br />
           Compared to chess, the simple rules & larger board lead to a game of great complexity; there are at least
-          10170 legal board positions, which is at least a million trillion trillion trillion trillion trillion trillion
+          10<sup>170</sup> legal board positions, which is at least a million trillion trillion trillion trillion trillion trillion
           trillion times greater than the number of electrons in the universe, itself a pretty large number; because of
           this, Go rather than chess is now used to challenge AI programs.<br />
           So, if you have a few spare minutes, give it your best shot – how hard can it be, right?<br />
