--- a/templates/pages/game.html
+++ b/templates/pages/game.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %} {% block content %}
 <div class="container">
-  <div class="row  p-5">
-    <div class="col-md-6 p-3">
-      <div class="mb-4 purple-border p-3">
+  <div class="mb-4 mt-2 purple-border p-3 small">
+    <script src="https://cdn.htmlgames.com/embed.js?game=Go&amp;&amp;bgcolor=white"></script>
+  </div>
+  <div class="row">
+    <div class="col-md-6 p-3 large">
+      <div class="mb-4 purple-border p-3 ">
         <script src="https://cdn.htmlgames.com/embed.js?game=Go&amp;&amp;bgcolor=white"></script>
       </div>
     </div>
@@ -13,7 +16,8 @@
           on the board, the aim being to capture the opponent’s stones by surrounding then removing them. The winner is
           the one with the greatest combined score of surrounded territory & captured stones.<br />
           Compared to chess, the simple rules & larger board lead to a game of great complexity; there are at least
-          10<sup>170</sup> legal board positions, which is at least a million trillion trillion trillion trillion trillion trillion
+          10<sup>170</sup> legal board positions, which is at least a million trillion trillion trillion trillion
+          trillion trillion
           trillion times greater than the number of electrons in the universe, itself a pretty large number; because of
           this, Go rather than chess is now used to challenge AI programs.<br />
           So, if you have a few spare minutes, give it your best shot – how hard can it be, right?<br />
