Update responsiveness Game and Testimonials

--- a/templates/testimonials/testimonials.html
+++ b/templates/testimonials/testimonials.html
@@ -9,7 +9,7 @@
         </div> -->
     <div class="row">
       {% if testimonials %} {% for testimonial in testimonials %} {% if testimonial.is_published %}
-      <div class="col-lg-6 mb-5">
+      <div class="col-xl-6 mb-5">
         <div class="square-container">
           <div class="square">
             <div class="front">
