Fix bug on Testimonials

--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2116,6 +2116,10 @@ a:hover {
     height: 10rem;
     font-size: 50%;
     }
+
+    .square .back p {
+      padding: 5px !important;
+      }
 }
 
 /*Activities*/
