--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2276,7 +2276,17 @@ a:hover {
 /*Tearsheets and Exhibitions*/
 
 #container {
-  width: 1100px;
+  width: 10000px;
+  white-space: nowrap;
+  overflow-x: auto;
+  margin: 0 auto;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
+
+#container-exh {
+  width: 10000px;
   white-space: nowrap;
   overflow-x: auto;
   margin: 0 auto;
