--- a/templates/exhibitions/index.html
+++ b/templates/exhibitions/index.html
@@ -9,8 +9,8 @@
             </div>
         </div> -->
 
-    <div id="container-exh" class="pink-line">
-      <ul id="lijst">
+    <div id="container" class="pink-line">
+      <ul id="lijst-exh">
         {% if exhibitions %} {% for exhibition in exhibitions %} {% if exhibition.is_published %}
         <li class="element 
         {% if exhibition.is_vertical %}
