--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -2276,17 +2276,7 @@ a:hover {
 /*Tearsheets and Exhibitions*/
 
 #container {
-  width: 10000px;
-  white-space: nowrap;
-  overflow-x: auto;
-  margin: 0 auto;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-}
-
-#container-exh {
-  width: 10000px;
+  width: 1100px;
   white-space: nowrap;
   overflow-x: auto;
   margin: 0 auto;
@@ -2296,6 +2286,11 @@ a:hover {
 }
 
 #lijst {
+  min-width: 10000px;
+  padding: 0px;
+}
+
+#lijst-exh {
   min-width: 4000px;
   padding: 0px;
 }
