Text center in exhbitions and activities

--- a/templates/elements/posts.html
+++ b/templates/elements/posts.html
@@ -16,7 +16,7 @@
       <div class="col-md-7 mb-3">
         <div class="body">
           <h5 class="card-title orange-title">{{ post.title }}</h5>
-          <p class="card-text justify">{{ post.description }}</p>
+          <p class="card-text text-center">{{ post.description }}</p>
           <a href="{{ post.id }}" class="btn btn-orange">Read More</a>
         </div>
       </div>
