--- a/templates/recent_activities/activities.html
+++ b/templates/recent_activities/activities.html
@@ -16,7 +16,7 @@
       <div class="col-md-7 mb-3">
         <div class="body">
           <h5 class="work-title light-blue-title">{{ activity.title }}</h5>
-          <p class="card-text justify">{{ activity.description }}</p>
+          <p class="card-text text-center">{{ activity.description }}</p>
           <a href="{{ activity.id }}" class="btn btn-light-blue">Read More</a>
         </div>
       </div>
