--- a/templates/pages/welcome.html
+++ b/templates/pages/welcome.html
@@ -7,7 +7,7 @@
                                 <div class="col-12 col-xl-4">
                                         <p>Thanks for taking the time to look at my work.<br/><br/>
                                                 I’m always looking for ways to improve the service I offer so all comments,
-                                                compliments or criticisms are welcome, though as Noel Cowerd said ’I can
+                                                compliments or criticisms are welcome, though as Noel Coward said ’I can
                                                 stand any amount of criticism as long as it’s unqualified praise’<br/><br/>
                                                 Emails go straight to my phone but if it’s urgent please call – if I’m not able to
                                                 answer, leave a message and I’ll respond as soon as I can<br/><br/>
