--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -67,7 +67,8 @@
           </div>
 
           <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;">
-            <a href="#" class="site-menu-toggle js-menu-toggle text-black"><span class="icon-menu h3"></span></a>
+            <button href="#" class="site-menu-toggle js-menu-toggle text-black"><span
+                class="icon-menu h3"></span></button>
           </div>
         </div>
       </div>
