--- a/IanPortfolio/static/css/style.css
+++ b/IanPortfolio/static/css/style.css
@@ -1691,6 +1691,10 @@ a:hover {
   color: #660066 !important;
 }
 
+.active9 a {
+  color: #66cc00 !important;
+}
+
 .orange-title {
   color: #ee7c0e;
 }
@@ -1985,8 +1989,7 @@ a:hover {
 }
 
 .work-row {
-  margin-bottom: 100px !important;
-  margin-top: 100px !important;
+  margin: 100px 15px !important;
 }
 .small {
   display: none;
@@ -2300,7 +2303,7 @@ a:hover {
 }
 
 #lijst-exh {
-  min-width: 4000px;
+  min-width: 4500px;
   padding: 0px;
 }
 
@@ -2425,4 +2428,79 @@ button:focus {
   .large {
     display: none;
   }
+}
+
+/*Current Exhibition*/
+
+.curr-exh-text-container {
+  margin: 40px;
+}
+
+.curr-exh-title {
+  font-weight: bold;
+}
+
+.carousel-caption p {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#lijst-curr-exh {
+  min-width: 2450px;
+  padding: 0px;
+  margin-top: 10px;
+}
+
+#slider-thumbs {
+  margin-top: 10px;
+}
+
+.list-thumb-gallery li {
+  margin-bottom: 10px;
+}
+
+.content {
+  overflow: hidden;
+}
+
+.wrap-gallery-article {
+  margin: 40px;
+  overflow: hidden;
+}
+
+.wrap-gallery-article #container {
+  width: 620px;
+}
+
+.element {
+  padding: 0;
+  padding-right: 3px;
+  margin: 0;
+}
+
+/* width */
+.wrap-gallery-article ::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+.wrap-gallery-article ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+.wrap-gallery-article ::-webkit-scrollbar-thumb {
+  background: #66cc00;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.wrap-gallery-article ::-webkit-scrollbar-thumb:hover {
+  background: #4c9007;
+}
+
+.img-element {
+  height: 100px;
+  width: 170px;
 }
