Update Current Exh Page

--- a/templates/pages/current-exhibition.html
+++ b/templates/pages/current-exhibition.html
@@ -249,7 +249,7 @@
           id="lijst-curr-exh"
           class="reset-ul d-flex flex-wrap list-thumb-gallery"
         >
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -262,7 +262,7 @@
             </a>
           </li>
 
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -276,7 +276,7 @@
             </a>
           </li>
 
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -290,7 +290,7 @@
             </a>
           </li>
 
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -304,7 +304,7 @@
             </a>
           </li>
 
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -318,7 +318,7 @@
             </a>
           </li>
 
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -331,7 +331,7 @@
               />
             </a>
           </li>
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -344,7 +344,7 @@
               />
             </a>
           </li>
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -357,7 +357,7 @@
               />
             </a>
           </li>
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -370,7 +370,7 @@
               />
             </a>
           </li>
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -383,7 +383,7 @@
               />
             </a>
           </li>
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -396,7 +396,7 @@
               />
             </a>
           </li>
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -409,7 +409,7 @@
               />
             </a>
           </li>
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
@@ -422,7 +422,7 @@
               />
             </a>
           </li>
-          <li class="element">
+          <li class="element element-exh">
             <a
               class="thumbnail"
               data-target="#myCarouselArticle"
